kubernetes/apps/code/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - git.${SECRET_DOMAIN}
  rules:
    # Do not publicly expose /metrics endpoint.
    - matches:
        - path:
            value: /metrics
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: not-found
    - backendRefs:
        - name: forgejo-http
          port: 3000
